--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,7 +8,7 @@
         <item name="android:textAllCaps">false</item>
         <item name="android:textSize">12sp</item>
         <item name="android:fontFamily">@font/marcellus</item>
-        <item name="android:textColor">@color/pawty_text_secondary</item>
+        <item name="android:textColor">@color/pawty_text_third</item>
 
         <item name="android:gravity">center</item>
         <item name="iconPadding">4dp</item>
