--- a/app/src/main/res/layout/custom_toolbar.xml
+++ b/app/src/main/res/layout/custom_toolbar.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.appcompat.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.appcompat.widget.Toolbar
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/toolbar"
     android:layout_width="match_parent"
     android:layout_height="100dp"
@@ -11,12 +12,12 @@
 
         <ImageButton
             android:id="@+id/profile_btn"
-            android:layout_width="55dp"
-            android:layout_height="55dp"
+            android:layout_width="65dp"
+            android:layout_height="65dp"
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
-            android:layout_marginStart="1dp"
-            android:layout_marginTop="28dp"
+            android:layout_marginStart="3dp"
+            android:layout_marginTop="20dp"
             android:background="@android:color/transparent"
             android:contentDescription="@string/cd_profile"
             android:scaleType="centerCrop"
@@ -27,32 +28,36 @@
             android:layout_width="159dp"
             android:layout_height="match_parent"
             android:layout_centerHorizontal="true"
-            android:layout_marginStart="19dp"
-            android:scaleType="centerInside"
+            android:layout_marginStart="22dp"
             android:layout_toEndOf="@+id/profile_btn"
-            android:contentDescription="Go to Home"
             android:background="?attr/selectableItemBackgroundBorderless"
+            android:contentDescription="Go to Home"
+            android:scaleType="centerInside"
             android:src="@drawable/ic_pawty_logo" />
 
         <ImageButton
             android:id="@+id/notifs_btn"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_marginStart="21dp"
-            android:layout_toEndOf="@+id/app_logo"
-            android:background="?attr/selectableItemBackgroundBorderless"
-            android:src="@drawable/ic_notifications"
-            android:contentDescription="notification button"/>
+            android:layout_width="46dp"
+            android:layout_height="46dp"
+            android:layout_toStartOf="@id/inbox_btn"
+            android:layout_centerVertical="true"
+            android:layout_marginEnd="12dp"
+            android:background="@android:color/transparent"
+            android:padding="0dp"
+            android:scaleType="fitCenter"
+            android:src="@drawable/ic_notifications" />
 
         <ImageButton
             android:id="@+id/inbox_btn"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_marginStart="21dp"
-            android:layout_toEndOf="@+id/notifs_btn"
-            android:background="?attr/selectableItemBackgroundBorderless"
-            android:src="@drawable/ic_inbox"
-            android:contentDescription="Inbox Button"/>
+            android:layout_width="44dp"
+            android:layout_height="44dp"
+            android:layout_alignParentEnd="true"
+            android:layout_centerVertical="true"
+            android:layout_marginEnd="16dp"
+            android:background="@android:color/transparent"
+            android:padding="0dp"
+            android:scaleType="fitCenter"
+            android:src="@drawable/ic_inbox" />
 
 
     </RelativeLayout>
