--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -40,4 +40,24 @@
         <item name="chipStartPadding">14dp</item>
         <item name="chipEndPadding">14dp</item>
     </style>
+
+    <style name="PawtyPrimaryButton" parent="Widget.MaterialComponents.Button">
+        <item name="android:textAllCaps">false</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:fontFamily">@font/marcellus</item>
+        <item name="android:textColor">@color/pawty_text_secondary</item>
+
+        <item name="android:insetTop">6dp</item>
+        <item name="android:insetBottom">6dp</item>
+        <item name="cornerRadius">12dp</item>
+
+        <item name="backgroundTint">@color/pawty_teal</item>
+        <item name="strokeColor">@color/pawty_dark_blue</item>
+        <item name="strokeWidth">2dp</item>
+    </style>
+
+    <style name="TextAppearance.Pawty.Body" parent="TextAppearance.MaterialComponents.Body1">
+        <item name="android:fontFamily">@font/marcellus</item>
+        <item name="android:textColor">@color/pawty_text_secondary</item>
+    </style>
 </resources>
