Added post functionality to be able to comment, post or reply by choice of pet, supporting multiple pets. Like sync to post and comments etc.. Added ability to delete user posts, comments, replies. Added rules to firebase to prevent deleting other user posts, comments, etc.. Added ability to be able to choose which pet to post as. Waiting on few things to continue progress on homescreen

--- a/app/src/main/res/layout/item_post.xml
+++ b/app/src/main/res/layout/item_post.xml
@@ -199,5 +199,16 @@
                 android:contentDescription="@string/cd_expand_comments" />
         </LinearLayout>
 
+        <!-- Comments list (collapsed by default) -->
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rvComments"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingStart="16dp"
+            android:paddingEnd="16dp"
+            android:paddingBottom="12dp"
+            android:visibility="gone"
+            tools:listitem="@layout/item_comment" />
+
     </LinearLayout>
 </com.google.android.material.card.MaterialCardView>
